--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -59,7 +59,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-48815860-1', 'hanxiaomax.github.io');
+  ga('create', 'UA-51505545-1', 'saidz.github.io');
   ga('send', 'pageview');
 
 </script>
